# competitiontestrunner

./: .travis.yml  CMakeLists.txt  README.md  create  template.cpp  test-runner.cpp
filecreator/: CMakeLists.txt  main.cpp
filecreator/resource/: generate.py  template.cpp  template.py
testrunner/: CMakeLists.txt  language.h  main.cpp
